--- a/web2py/applications/pythoggle/views/layout.html
+++ b/web2py/applications/pythoggle/views/layout.html
@@ -105,10 +105,9 @@
     {{block footer}} <!-- this is default footer -->      
     <footer class="footer">
       <div class="container-fluid">
-        <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
-          <div id="poweredBy" class="pull-right">
-            {{=T('Powered by')}}
-            <a href="http://www.web2py.com/">web2py</a>
+        <div class="copyright pull-right">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
+          <div id="poweredBy" class="pull-left">
+            {{=T('Built by John Davidson')}}
           </div>
       </div>
     </footer>
@@ -127,6 +126,6 @@
     </script>
     {{pass}}
     <!-- Share ============================y============ -->
-    <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
   </body>
+</html>
 </html>
