--- a/web2py/applications/pythoggle/views/default/match.html
+++ b/web2py/applications/pythoggle/views/default/match.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src='words.js'></script>
     <script type="text/javascript">
 
-        current_word = [];
+        current_word = "";
         list_of_words = [];
         color_light_yellow = "#f9ff60";
         color_light_grey = "#b8aeba";
@@ -69,23 +69,7 @@
 
 
 
-        /**
-         * TODO: create submit word button
-         * TODO: call submit_current_word() when the "submit word" button is pressed
-         * TODO: also have "clear" button if you want to clear the current word
-         *
-         * TODO: display all submitted words on the side somewhere
-         */
-
-
-
-        function get_current_word_string() {
-            var word = '';
-            for (var i = 0; i < current_word.length; ++i) {
-                word = word + current_word[i];
-            }
-            return word;
-        }
+        
 
         function color_cell(cell) {
              document.getElementById(cell).style.backgroundColor = color_light_yellow;
@@ -94,7 +78,7 @@
 
 
         function can_be_pressed_down(cell) {
-            if (current_word.length = 0) {
+            if (current_word.length == 0) {
                 return true;
             }
 
@@ -107,30 +91,30 @@
             //check each viable position combination
             for (x = 0; x < dimension; x++){
                 for (y = 0; y < dimension; y++) {
-                    if (x <= cell_x + 1 || x >= cell_x - 1) {
-                        if (y <= cell_y + 1 || y >= cell_y - 1) {
-                            possible_cells.append(x + "_" + y);
+                    if (x <= cell_x + 1 && x >= cell_x - 1) {
+                        if (y <= cell_y + 1 && y >= cell_y - 1) {
+                            possible_cells.push(x + "_" + y);
                         }
                     }
                 }
             }
 
             //now, check if our passed cell exists in possible_cells
-            if (possible_cells.indexOf(cell) > -1) {
-                return true
-            }
+            return possible_cells.indexOf(cell) > -1;
 
-            return false;
+
         }
 
         function clear_word_and_board() {
-            current_word = [];
+//            current_word = [];
+            current_word = "";
 
             //for every square in the board, clear the color
             for (x = 0; x < dimension; x++){
                 for (y = 0; y < dimension; y++) {
                     var cell = x + "_" + y;
                     document.getElementById(cell).style.backgroundColor = color_light_grey;
+                    document.getElementById("current_word").innerHTML = "";
                 }
             }
         }
@@ -146,12 +130,16 @@
 
 
         function submit_current_word() {
-            var word_string = get_current_word_string();
+//            var word_string = get_current_word_string();
+            var word_string = current_word;
+//            alert("Submitting word: " + word_string);
 
             //check to see if the current word is in the english dictionary.
             //if so, clear the board and current word, add to submitted words list, and return true
+            var w = words;
             if (words.indexOf(word_string) > -1) {
-                list_of_words.append(word_string);
+                alert("VALID WORD!");
+                list_of_words.push(word_string);
                 clear_word_and_board();
                 return true;
             }
@@ -161,10 +149,16 @@
         function letter_selected(event) {
             var cell = event.currentTarget.offsetParent.id;
             var letter = event.currentTarget.textContent;
+
+            if (current_word.length < 1) {
+                last_pressed_down = cell;
+            }
+
             if (can_be_pressed_down(cell)) {
                 document.getElementById(cell).style.backgroundColor = color_light_yellow;
                 color_cell(cell);
-                current_word.push(letter);
+                current_word = current_word + letter;
+                document.getElementById("current_word").innerHTML = current_word;
             }
         }
 
@@ -174,7 +168,7 @@
             for (x = 0; x < dimension; x++){
                 table_string = table_string + '<tr>';
                 for (y = 0; y < dimension; y++) {
-                    table_string = table_string + '<td id="' + x + '_' + y + '" width="' + 250 / dimension + 'px"> </td>';
+                    table_string = table_string + '<td id="' + y + '_' + x + '" width="' + 250 / dimension + 'px"> </td>';
                 }
                 table_string = table_string + '</tr>';
             }
@@ -214,6 +208,9 @@
         //TODO: clean up, refactor these methods more.
         function new_game() {
             game_in_progress = true;
+            current_word = "";
+            last_pressed_down = "";
+            list_of_words = [];
             roll_dice();
             make_table(false);
             update_table();
@@ -262,11 +259,25 @@
                     make_table(true);
                 </script>
             </div>
-            <table width=368 cellpadding=0 cellspacing=0 id="timetable">
+            <table width=368 cellpadding=0 cellspacing=0 id="time_table">
                 <tr>
                     <td id='bar_remaining' width=218 height=25></td>
                     <td id='bar_elapsed' width=150 height=25></td>
             </table>
+            <div id="current_word" style="margin-bottom: 10px;">
+
+            </div>
+             <div id="words_so_far" style="margin-bottom: 10px;">
+                []
+            </div>
+            <div style="margin-bottom: 10px;">
+                <form id="submit_button">
+                    <input type="button" value="Submit Word" onclick='submit_current_word()'>
+                </form>
+                <form id="clear_button">
+                    <input type="button" value="Clear Word" onclick='clear_word_and_board()'>
+                </form>
+            </div>
             <div id="time_remaining" style="margin-bottom:10px; margin-top: 10px;">
                 Time remaining: ...
             </div>
